# level2_cv_datacentric-cv-15

./: .gitignore  README.md  base_config.json  config_train.py  group_k_fold.ipynb  pyproject.toml  settings.sh
codebook/: data_add_form.ipynb  group_k_fold.ipynb  output_visualize.ipynb  train_visualize.ipynb
